--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Nix Env Picker",
   "description": "Development environment switcher for Nix shells and flakes, enabling seamless transitions between different Nix configurations",
   "version": "0.0.1",
-  "publisher": "Oops418",
+  "publisher": "io-github-oops418",
   "author": {
     "name": "Oops418",
     "email": "oooopsXxx@gmail.com"
